--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.edmarscenter</groupId>
 	<artifactId>servidor</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>servidor</name>
 	<description>Servidor EdmarsCenter</description>
 	<properties>
