--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.port=8087
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://35.224.81.166/postgres
+spring.datasource.url=jdbc:postgresql://35.193.245.81/tecnocentertienda
 spring.datasource.username=postgres
 spring.datasource.password=Buele30.03.1997
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
